# vialytics

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_DIAGNOSIS.md  Dockerfile.railway  README.md  TESTING.md  TODO.md  VERCEL_DEPLOYMENT.md  browser-diagnostic.js  mvpp_plans.md  railway.toml  supabase-schema.sql  supabase_schema.sql
app/: .env.example  .env.production.example  README.md  build.ts  bun-env.d.ts  insights_result.json  package.json  vercel.json
app/src/: App.tsx  index.css  index.html  index.ts  test-groq.js
app/src/components/: FormattedText.tsx  Header.tsx  LabelInfo.tsx  ModeToggle.tsx  Sidebar.tsx  SolanaNews.tsx  StatCard.tsx  Typewriter.tsx  Via.tsx
app/src/data/: analytics.json
app/src/lib/: ai-pipe.ts  (+2 more)
docs/: PROJECT_CONTEXT.md  SOLANA_WRAPPED_IMPLEMENTATION.md  ai-integration-guide.md
vialytics-api/: .env.example  Dockerfile  README.md  cleanup_vllm.sh  debug_gemini.py  debug_greeting.py  pyproject.toml  railway.toml
vialytics-api/src/vialytics_api/: api_server.py  main.py  start_worker.py
vialytics-api/src/vialytics_api/core/: config.py  database.py
vialytics-api/src/vialytics_api/models/: chat.py
vialytics-api/src/vialytics_api/routers/: analytics.py  chat.py
vialytics-api/src/vialytics_api/services/: analytics.py  data_service.py  helius_client.py  indexer_service.py  label_service.py  llm_service.py  price_service.py  supabase_service.py
vialytics-api/tests/: README.md  test_analytics.py
vialytics-api/tests/services/: test_services.py
vialytics-core/: Cargo.toml
vialytics-core/src/: db.rs
vialytics-web/: package.json
(+19 files in other folders)
