[project]
name = "vialytics-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel",email = "neocrytpoquant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0"
]

[tool.poetry]
packages = [{include = "vialytics_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
